--- a/language-configuration.json
+++ b/language-configuration.json
@@ -6,24 +6,30 @@
   "brackets": [
     ["{", "}"],
     ["[", "]"],
-    ["(", ")"]
+    ["(", ")"],
+    ["{{", "}}"],
+    ["{%", "%}"]
   ],
   "autoClosingPairs": [
-    ["{", "}"],
-    ["[", "]"],
-    ["(", ")"],
-    ["\"", "\""],
-    ["'", "'"]
+    { "open": "{", "close": "}" },
+    { "open": "[", "close": "]" },
+    { "open": "(", "close": ")" },
+    { "open": "\"", "close": "\"", "notIn": ["string"] },
+    { "open": "'", "close": "'", "notIn": ["string"] },
+    { "open": "`", "close": "`", "notIn": ["string"] },
+    { "open": "{{", "close": "}}" },
+    { "open": "{%", "close": "%}" }
   ],
   "surroundingPairs": [
     ["{", "}"],
     ["[", "]"],
     ["(", ")"],
     ["\"", "\""],
-    ["'", "'"]
+    ["'", "'"],
+    ["`", "`"]
   ],
   "indentationRules": {
-    "increaseIndentPattern": "^(.*\\{[^}\"'`]*|.*\\([^)\"'`]*|.*\\[[^\\]\"'`]*)$",
-    "decreaseIndentPattern": "^(.*\\}.*|.*\\).*|.*\\].*)$"
+    "increaseIndentPattern": "^\\s*(if|for|while|try|switch|function)\\b.*|.*\\{\\s*$",
+    "decreaseIndentPattern": "^\\s*(\\}|endif|endfor|endwhile|endfunction|catch|case|default)\\b"
   }
 }
