--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ucode-lsp",
   "displayName": "ucode Language Support",
   "description": "Language Server Protocol support for ucode scripting language",
-  "version": "0.3.19",
+  "version": "0.3.20",
   "repository": {
     "type": "git",
     "url": "https://github.com/NoahBPeterson/ucode-lsp"
@@ -64,7 +64,7 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
+    "vscode:prepublish": "bun run package",
     "compile": "webpack",
     "package": "webpack --mode production --devtool hidden-source-map",
     "watch": "webpack --watch"
