--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "ucode-lsp",
   "displayName": "ucode Language Support",
   "description": "Language Server Protocol support for ucode scripting language",
-  "version": "0.3.21",
+  "version": "0.3.22",
+  "publisher": "noahbpeterson",
   "repository": {
     "type": "git",
     "url": "https://github.com/NoahBPeterson/ucode-lsp"
   },
   "license": "MIT",
   "engines": {
-    "vscode": "^1.74.0"
+    "vscode": "^1.86.0"
   },
   "categories": [
     "Programming Languages"
@@ -75,10 +76,12 @@
     "vscode-languageserver-textdocument": "^1.0.12"
   },
   "devDependencies": {
-    "@types/node": "16.x",
-    "@types/vscode": "^1.74.0",
+    "@types/bun": "latest",
+    "@types/node": "24.0.14",
+    "@types/vscode": "^1.86.0",
+    "@vscode/vsce": "^3.6.0",
     "ts-loader": "^9.5.2",
-    "typescript": "^4.9.4",
+    "typescript": "^5.8.3",
     "webpack": "^5.100.1",
     "webpack-cli": "^6.0.1"
   }
