--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["vscode"],
-    "allowSyntheticDefaultImports": true
+    "types": ["vscode", "bun"],
+    "allowSyntheticDefaultImports": true,
+    "noErrorTruncation": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "out"]
