--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ucode-lsp",
   "displayName": "ucode Language Support",
   "description": "Language Server Protocol support for ucode scripting language",
-  "version": "0.3.42",
+  "version": "0.3.43",
   "publisher": "noahbpeterson",
   "repository": {
     "type": "git",
@@ -20,10 +20,17 @@
     "languages": [
       {
         "id": "ucode",
-        "aliases": ["ucode", "uCode"],
-        "extensions": [".uc"],
+        "aliases": [
+          "ucode",
+          "uCode"
+        ],
+        "extensions": [
+          ".uc"
+        ],
         "configuration": "./language-configuration.json",
-        "mimetypes": ["text/x-ucode"]
+        "mimetypes": [
+          "text/x-ucode"
+        ]
       }
     ],
     "grammars": [
