--- a/.vscodeignore
+++ b/.vscodeignore
@@ -3,6 +3,7 @@ src/**
 fuzz-tests/**
 tests/**
 node_modules/**
+/linguist-proposal/**
 webpack.config.js
 tsconfig.json
 .vscode/**
@@ -14,6 +15,7 @@ vsc-extension-quickstart.md
 **/*.map
 **/*.ts
 ucode/**
+u1905/**
 payload_processor_ucode/**
 ucode_gotchas.md
 .claude/**
@@ -24,3 +26,5 @@ bun.lock
 **/*.md
 **/*.py
 **/*.uc
+*.txt
+*.js
